k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: all-services-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://local.jsbms.keycloak"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: local.jsbms
      http:
        paths:
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 9000
          - path: /frontend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /kafka-ui
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 9000
          - path: /prometheus(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
          - path: /loki(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: loki
                port:
                  number: 3100
          - path: /tempo(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tempo
                port:
                  number: 3200
